1.1.33-beta1
- Update Issue#199: Add touch listener for toolbar when in fullscreen mode.
- Remove srcset from image parser.

1.1.32
- Enable toolbar for Settings Activity.
- Fix Issue #202: Default Zoom based on screen density.
- Fix null pointer exception when loading novel details.
- Fix Issue #200: Screen rotation lock.
- Fix Issue #197: Download List cleanup.
- Fix Novel List & Details title update.
- Fix Issue #194: Item list color.
- Fix unhandled exception on novel list.
- Update thumb.php handling.
- Fix page reload when resuming activity in fullscreen mode.

1.1.31
- Update UI to use material design.
- Replace ActionBarSherlock with appcompat.
- Fix cover issue.
- Update external page handling.

1.1.30
- Update blogspot handler for country redirect.

1.1.29
- Fix Issue #189: Images not loaded on Android 5.x
- Fix update time interval scheduler.

1.1.28b
- Fix Issue #184: Update category for teaser to Category:Teaser_(English).
- Add Feature #187: New option to only update when Wifi is connected.
- Change updates interval values to avoid hammering the server.
- Some fixes for unhandled exception
- Fix error when opening settings.

1.1.27
- Fix Issue #181: Add check for older android for isDestroyed().
- Fix Issue #182: Handle IllegalArgumentException for NonLeakingWebView.checkZoomEvent().
- Fix Issue #183: Handle NullPointerException on some classes.

1.1.26
- Add option to download high resolution cover image.

1.1.25
- Fix Issue #173: Update parser to handle external chapter.
- Fix issue #174: Novel cover scaling.
- Wrap image viewer in html to allow better scaling.
- Refactor DisplayNovelContentActivity and BakaTsukiWebViewClient.
- Add Browser Back for external pages, may only works for KitKat+.
- Fix Issue #175: Prev/Next loading.

1.1.24
- Fix Issue #169: Keep current image after screen rotation.
- Fix Issue #170: Crash when scrolling chapter list.
- Fix Issue #171: Keep chapter color when scrolling.
- Optimize search loading.