@@ -180,4 +180,5 @@ public class Constants {
 
     public static final String EXTRA_NOVEL_LANG = "lang";
     public static final String EXTRA_INITIAL_FRAGMENT = "initialFragment";
+    public static final String PREF_RESET_ZOOM = "reset_zoom";
 }
