@@ -488,4 +488,6 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="reset_zoom_title">Reset Zoom Level</string>
+    <string name="reset_zoom_summary">Reset the zoom level to default value based on screen density.</string>
 </resources>
